<resources>
    <string name="app_name">PR023ListConFragment</string>

    <string name="action_settings">Settings</string>
    <string name="edad">Edad</string>
    <string name="calle">Calle</string>
    <string name="localidad">Localidad</string>
    <string name="imagen_cabecera">Imagen de cabecera</string>
    <string name="imagenAvatar">Imagen Avatar</string>
    <string name="hintNombre">Nombre</string>
    <string name="hintLocalidad">Localidad</string>
    <string name="hintCalle">Calle</string>
    <string name="maxLinesAddContacto">1</string>
    <string name="lenghtTxtAddContacto">26</string>
    <string name="hintTelefono">Teléfono</string>
    <string name="hintPrefijo">+34</string>
    <string name="lenghtPrefijo">3</string>
    <string name="lenghtPhone">9</string>
    <string name="hintEdad">Edad</string>
    <string name="lblTelefono">Teléfono</string>
    <string name="lblNoHayAlumnoText">No hay alumnos</string>
    <string name="titleItemAgregar">Agregar</string>
    <string name="titleItemBorrar">Borrar</string>
    <string name="titleAgregarContactoActivityEditando">Editar Contacto</string>
    <string name="contentImgAvatar">imgAvatar</string>
    <string name="titleItemNewContact">Agregar</string>
    <string name="titleItemCancelContact">Cancerlar</string>
    <string name="titleItemEditar">Editar</string>
    <string name="titleItemLlamar">Llamar</string>
</resources>
