<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>
    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:contentDescription="Imagen Contacto"
        android:src="@drawable/icon_user_default"
        android:scaleType="fitXY"
        android:layout_below="@+id/toolbar"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgAvatar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_action_person"
                android:layout_marginLeft="@dimen/marginLeftIconMaterialDesign"
                android:layout_marginStart="@dimen/marginLeftIconMaterialDesign"
                android:layout_marginTop="@dimen/marginTopIconMaterialDesign"
                />
            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spaceContentArea"
                android:layout_marginBottom="@dimen/spaceContentArea"
                android:paddingTop="@dimen/paddingItem"
                android:paddingBottom="@dimen/paddingItem"
                android:hint="@string/hintNombre"
                android:layout_marginLeft="@dimen/marginLeftMaterialDesign"
                android:layout_marginStart="@dimen/marginLeftMaterialDesign"
                android:layout_marginRight="@dimen/marginRightMaterialDesign"
                android:layout_marginEnd="@dimen/marginRightMaterialDesign"
                android:maxLines="@string/maxLinesAddContacto"
                android:maxLength="@string/lenghtTxtAddContacto"

                />
            <EditText
                android:id="@+id/txtEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNombre"
                android:layout_marginTop="@dimen/spaceContentArea"
                android:layout_marginBottom="@dimen/spaceContentArea"
                android:paddingTop="@dimen/paddingItem"
                android:paddingBottom="@dimen/paddingItem"
                android:hint="@string/hintEdad"
                android:layout_marginLeft="@dimen/marginLeftMaterialDesign"
                android:layout_marginStart="@dimen/marginLeftMaterialDesign"
                android:layout_marginRight="@dimen/marginRightMaterialDesign"
                android:layout_marginEnd="@dimen/marginRightMaterialDesign"
                android:maxLines="@string/maxLinesAddContacto"
                android:maxLength="2"
                android:inputType="phone"
                />
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@id/txtEdad"
                android:src="@drawable/ic_action_call"
                android:layout_marginLeft="@dimen/marginLeftIconMaterialDesign"
                android:layout_marginStart="@dimen/marginLeftIconMaterialDesign"
                android:layout_marginTop="@dimen/marginTopIconMaterialDesign"
                />
            <EditText
                android:id="@+id/txtPrefijo"
                android:layout_width="@dimen/widthPrefijo"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEdad"
                android:layout_marginLeft="@dimen/marginLeftMaterialDesign"
                android:layout_marginStart="@dimen/marginLeftMaterialDesign"
                android:layout_marginRight="@dimen/marginRightMaterialDesign"
                android:layout_marginEnd="@dimen/marginRightMaterialDesign"
                android:layout_marginTop="@dimen/spaceContentArea"
                android:layout_marginBottom="@dimen/spaceContentArea"
                android:paddingTop="@dimen/paddingItem"
                android:paddingBottom="@dimen/paddingItem"
                android:hint="@string/hintPrefijo"
                android:maxLength="@string/lenghtPrefijo"
                android:inputType="phone"/>
            <EditText
                android:id="@+id/txtTlf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEdad"
                android:layout_marginTop="@dimen/spaceContentArea"
                android:layout_marginBottom="@dimen/spaceContentArea"
                android:layout_marginRight="@dimen/marginRightMaterialDesign"
                android:layout_marginEnd="@dimen/marginRightMaterialDesign"
                android:paddingTop="@dimen/paddingItem"
                android:paddingBottom="@dimen/paddingItem"
                android:hint="@string/hintTelefono"
                android:layout_toRightOf="@id/txtPrefijo"
                android:layout_toEndOf="@id/txtPrefijo"
                android:maxLines="@string/maxLinesAddContacto"
                android:maxLength="@string/lenghtPhone"
                android:inputType="phone"

                />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@id/txtTlf"
                android:src="@drawable/ic_action_place"
                android:layout_marginLeft="@dimen/marginLeftIconMaterialDesign"
                android:layout_marginStart="@dimen/marginLeftIconMaterialDesign"
                android:layout_marginTop="@dimen/marginTopIconMaterialDesign"
                />
            <EditText
                android:id="@+id/txtLocalidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTlf"
                android:layout_marginTop="@dimen/spaceContentArea"
                android:layout_marginBottom="@dimen/spaceContentArea"
                android:paddingTop="@dimen/paddingItem"
                android:paddingBottom="@dimen/paddingItem"
                android:hint="@string/hintLocalidad"
                android:layout_marginLeft="@dimen/marginLeftMaterialDesign"
                android:layout_marginStart="@dimen/marginLeftMaterialDesign"
                android:layout_marginRight="@dimen/marginRightMaterialDesign"
                android:layout_marginEnd="@dimen/marginRightMaterialDesign"
                android:maxLines="@string/maxLinesAddContacto"
                android:maxLength="@string/lenghtTxtAddContacto"
                />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@id/txtLocalidad"
                android:src="@drawable/ic_action_place"
                android:layout_marginLeft="@dimen/marginLeftIconMaterialDesign"
                android:layout_marginStart="@dimen/marginLeftIconMaterialDesign"
                android:layout_marginTop="@dimen/marginTopIconMaterialDesign"
                />
            <EditText
                android:id="@+id/txtCalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLocalidad"
                android:layout_marginTop="@dimen/spaceContentArea"
                android:layout_marginBottom="@dimen/spaceContentArea"
                android:paddingTop="@dimen/paddingItem"
                android:paddingBottom="@dimen/paddingItem"
                android:hint="@string/hintCalle"
                android:layout_marginLeft="@dimen/marginLeftMaterialDesign"
                android:layout_marginStart="@dimen/marginLeftMaterialDesign"
                android:layout_marginRight="@dimen/marginRightMaterialDesign"
                android:layout_marginEnd="@dimen/marginRightMaterialDesign"
                android:maxLines="@string/maxLinesAddContacto"
                android:maxLength="@string/lenghtTxtAddContacto"
                />
        </RelativeLayout>
    </ScrollView>





</RelativeLayout>